chore: 批量更新项目配置与新增技能组件
1. 更新后端代码审查工具版本至v2.7.0并修复相关逻辑
2. 新增markdown转换、高级文档生成、测试用例生成等技能组件
3. 优化个性化开发目录与类命名规则
4. 新增多个测试用例模板与示例代码
5. 清理过期的测试输出文件
6. 调整通用强制准则配置

# Please enter the commit message for your changes. Lines starting
# with '#' will be ignored, and an empty message aborts the commit.
#
# Date:      Thu May 21 21:09:56 2026 +0800
#
# On branch master
# Your branch and 'origin/master' have diverged,
# and have 1 and 1 different commits each, respectively.
#
# Changes not staged for commit:
#	modified:   rules/bemprule.md
#	deleted:    "skills/bemp-advanced-doc-generator/output/\345\220\210\345\220\214\345\217\221\347\245\250\347\256\241\347\220\206-SIT\346\265\213\350\257\225\347\224\250\344\276\213-20260516.xlsx"
#	deleted:    "skills/bemp-advanced-doc-generator/output/\345\220\210\345\220\214\345\217\221\347\245\250\347\256\241\347\220\206-\346\265\213\350\257\225\347\224\250\344\276\213-20260516.md"
#	deleted:    "skills/bemp-advanced-doc-generator/output/\346\211\271\351\207\217\345\257\274\345\205\245-\346\265\213\350\257\225\346\212\245\345\221\212-20260516.docx"
#	deleted:    "skills/bemp-advanced-doc-generator/output/\346\211\277\345\205\221\350\241\214\351\242\235\345\272\246-SIT\346\265\213\350\257\225\347\224\250\344\276\213-20260516.xlsx"
#	deleted:    "skills/bemp-advanced-doc-generator/output/\346\265\213\350\257\225\346\250\241\345\235\227-\346\265\213\350\257\225\347\224\250\344\276\213-20260516.docx"
#	deleted:    "skills/bemp-advanced-doc-generator/output/\346\265\213\350\257\225\346\250\241\345\235\227-\350\257\246\347\273\206\350\256\276\350\256\241\346\226\207\346\241\243-20260516.md"
#	deleted:    "skills/bemp-advanced-doc-generator/output/\351\242\235\345\272\246\347\256\241\347\220\206-SIT\346\265\213\350\257\225\347\224\250\344\276\213-20260516.xlsx"
#	modified:   skills/bemp-backend-code-review/README.md
#	modified:   skills/bemp-backend-code-review/SKILL.md
#	modified:   skills/bemp-backend-code-review/config/bank-config.json
#	modifie